# FireCam

./: CMakeLists.txt  README.md  bgextract.cpp  bgextract.h  canfil.cpp  canfil.h  firstcv.cpp  frameconv.cpp  frameconv.h  grafil.cpp  grafil.h  help.cpp  help.h  negfil.cpp  negfil.h  sepfil.cpp  sepfil.h  static_pic.cpp  static_pic.h  videocap.cpp  videocap.h  videosurv.cpp  videosurv.h
